--- a/contract/package.json
+++ b/contract/package.json
@@ -19,7 +19,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "4.8.0-rc.1",
@@ -40,7 +40,7 @@
     "eslint-config-prettier": "^8.5.0",
     "ethers": "^5.7.1",
     "fs-extra": "^10.1.0",
-    "hardhat": "^2.11.2",
+    "hardhat": "^2.12.0",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-deploy": "^0.11.18",
     "hardhat-gas-reporter": "^1.0.9",
