--- a/contract/package.json
+++ b/contract/package.json
@@ -44,7 +44,9 @@
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-deploy": "^0.11.18",
     "hardhat-gas-reporter": "^1.0.9",
+    "keccak256": "^1.0.6",
     "lodash": "^4.17.21",
+    "merkletreejs": "^0.2.32",
     "mocha": "^10.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.24",
